# visvalingam_simplify

./: CMakeLists.txt
pathviewer/: CMakeLists.txt  pathviewer.cpp
src/: heap.hpp  main.cpp  test_visvalingam.cpp  visvalingam_algorithm.cpp
